<resources>
    <string name="app_name">Shop Shoes Project</string>
    <string name="add_category">Thêm thể loại</string>
    <string name="category">Thể loại</string>
    <string name="view_category">Xem thể loại</string>
    <string name="add_brand">Thêm thương hiệu</string>
    <string name="brand">Thương hiệu</string>
    <string name="view_brand">Xem thương hiệu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Change Password</string>
    <string name="hidden_category">Ẩn/Hiển thị thể loại</string>
</resources>