<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_admin"
            android:icon="@drawable/ic_baseline_home_admin"
            android:title="Sản Phẩm" />

        <item
            android:id="@+id/nav_add_product"
            android:icon="@drawable/ic_baseline_add_admin"
            android:title="Thêm sản phẩm" />

        <item
            android:id="@+id/nav_hidden_product"
            android:icon="@drawable/hidden"
            android:title="Ẩn/Hiển thị sản phẩm" />

        <item
            android:id="@+id/nav_customer_order"
            android:icon="@drawable/ic_baseline_view_list"
            android:title="Đơn hàng" />
        <item
            android:id="@+id/nav_customer_bill"
            android:icon="@drawable/ic_baseline_assignment_turned_in_24"
            android:title="Hóa đơn" />
        <item
            android:id="@+id/nav_customer_statistic"
            android:icon="@drawable/ic_baseline_table_chart_24"
            android:title="Thống kê" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout"
            android:title="Đăng xuất" />
    </group>

    <item android:title="@string/category">
        <menu>
            <item
                android:id="@+id/nav_add_category"
                android:icon="@drawable/ic_baseline_add_admin"
                android:title="@string/add_category" />

            <item
                android:id="@+id/nav_view_category"
                android:icon="@drawable/ic_baseline_home_admin"
                android:title="@string/view_category" />
        </menu>
    </item>

    <item android:title="@string/brand">
        <menu>
            <item
                android:id="@+id/nav_add_brand"
                android:icon="@drawable/ic_baseline_add_admin"
                android:title="@string/add_brand" />

            <item
                android:id="@+id/nav_view_brand"
                android:icon="@drawable/ic_baseline_home_admin"
                android:title="@string/view_brand" />
        </menu>
    </item>
</menu>